--- a/zb/views/user_login.ejs
+++ b/zb/views/user_login.ejs
@@ -4,7 +4,10 @@
 
         <div class="relative h-full w-full">
             <!-- Full-screen Image -->
-            <img src="/images/blinkit.jpg" alt="Background Image" class="object-cover w-full h-full">
+             <div class="m-auto w-[40vw] absolute translate-x-[-50%] translate-y-[-50%] left-[50%] top-[50%]">
+                 <img src="/images/blacklogotext.png" alt="Background Image" class="object-cover w-full h-full">
+                 <p class="text-xl text-center mt-[-5vh]">Fashion Brand, Redesigning the Sense of Fashion !</p>
+             </div>
 
             <!-- Button at the Bottom -->
             <div class="absolute bottom-0 w-full flex justify-center mb-8">
